# erpnext-forex-integration

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
peasforex/: hooks.py  modules.txt
peasforex/api/: alpha_vantage.py  currency_exchange.py
peasforex/peasforex/dashboard_chart_source/forex_latest_rates/: forex_latest_rates.json  forex_latest_rates.py
peasforex/peasforex/dashboard_chart_source/forex_rate_trends/: forex_rate_trends.json  forex_rate_trends.py
peasforex/peasforex/doctype/applicable_company/: applicable_company.json  applicable_company.py
peasforex/peasforex/doctype/currency_pair/: currency_pair.json  currency_pair.py
peasforex/peasforex/doctype/forex_rate_log/: forex_rate_log.json  forex_rate_log.py
peasforex/peasforex/doctype/forex_settings/: forex_settings.js  forex_settings.json  forex_settings.py
peasforex/peasforex/doctype/forex_sync_log/: forex_sync_log.json  forex_sync_log.py
peasforex/peasforex/public/js/: currency_exchange.js  peasforex.js
peasforex/peasforex/report/exchange_rate_history/: exchange_rate_history.js  exchange_rate_history.json  exchange_rate_history.py
peasforex/peasforex/workspace/peasforex/: peasforex.json
peasforex/setup/: __init__.py  install.py
peasforex/tasks/: __init__.py  sync_forex.py
peasforex/tests/: test_alpha_vantage.py  test_doctypes.py  test_sync_forex.py
