[project]
name = "peasforex"
version = "0.0.1"
description = "Alpha Vantage Forex Integration for ERPNext"
authors = [
    {name = "ERP Champions", email = "info@erpchampions.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "peasforex"
